--- a/src/app/_metronic/partials/content/widgets/stats/stats-widget12/stats-widget12.component.html
+++ b/src/app/_metronic/partials/content/widgets/stats/stats-widget12/stats-widget12.component.html
@@ -50,8 +50,8 @@
                                                     onkeypress="return this.value.length < 10;"
                                                     oninput="if(this.value.length=10)">
                                                 <div>
-                                                    <small class="text-danger">Please
-                                                        provide a valid 10 Digit Mobile Number</small>
+                                                    <!-- <small class="text-danger">Please
+                                                        provide a valid 10 Digit Mobile Number</small> -->
                                                 </div>
                                             </div>
                                             <div class="col col-md-3 col-lg-3">
@@ -71,8 +71,8 @@
                                                 <input type="email" class="form-control" formControlName="email"
                                                     placeholder="Enter Email Address">
                                                 <div>
-                                                    <small class="text-danger">Please
-                                                        provide a valid email address</small>
+                                                    <!-- <small class="text-danger">Please
+                                                        provide a valid email address</small> -->
                                                 </div>
                                             </div>
                                         </div>
