--- a/src/app/_metronic/partials/content/widgets/tables/tables-widget20/tables-widget20.component.html
+++ b/src/app/_metronic/partials/content/widgets/tables/tables-widget20/tables-widget20.component.html
@@ -89,7 +89,7 @@
                     <tr>
 
                         <td>
-                            <!-- <a [routerLink]="['/admin/customerDetails', data.customerId]">{{data.FuelVeelsId}}</a> -->
+                            <a [routerLink]="['/customerDetails/customerDetail', data.customerId]">{{data.FuelVeelsId}}</a>
                         </td>
                         <td>{{data.corporateCreatedAt | date:"d MMM, yyyy"}}</td>
                         <td>{{data.companyName}}</td>
