--- a/src/app/pages/customerDetails/customer-detail/customer-detail.component.html
+++ b/src/app/pages/customerDetails/customer-detail/customer-detail.component.html
@@ -1,4 +1,4 @@
 <div class="card-header">
-    <b>Add Fuel Partner</b>
+    <b>Customer Details</b>
 </div>
 <app-stats-widget10></app-stats-widget10> 
