--- a/src/app/_metronic/partials/content/widgets/stats/stats-widget11/stats-widget11.component.html
+++ b/src/app/_metronic/partials/content/widgets/stats/stats-widget11/stats-widget11.component.html
@@ -14,6 +14,7 @@
                                             <div class="row">
                                                 <div class="col-md-6">
                                                     <h3>
+                                                        <button type="submit" class="btn btn-primary " [routerLink]="['/onboarding']">Back </button>
                                                     </h3>
                                                 </div>
 
