--- a/src/app/_metronic/partials/content/widgets/stats/stats-widget7/stats-widget7.component.html
+++ b/src/app/_metronic/partials/content/widgets/stats/stats-widget7/stats-widget7.component.html
@@ -17,7 +17,7 @@
         (click)="endDate.toggle()" formControlName="endDate" ngbDatepicker #endDate="ngbDatepicker">
     </div>
     <div class="col-auto">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="button" (click)="getActivityCount()">
+      <button class="btn btn-success my-2 my-sm-0" type="button" (click)="getActivityCount()">
         view </button>
     </div>
   </div>
@@ -33,7 +33,7 @@
     </div>
     <div class="col-md-4"></div>
     <div class="col-auto">
-      <button class="btn btn-outline-primary my-2 my-sm-0" type="button" (click)="excelDownload()">
+      <button class="btn btn-primary my-2 my-sm-0" type="button" (click)="excelDownload()">
         download </button>
     </div>
   </div>
