--- a/src/app/_metronic/partials/content/widgets/stats/stats-widget8/stats-widget8.component.html
+++ b/src/app/_metronic/partials/content/widgets/stats/stats-widget8/stats-widget8.component.html
@@ -17,7 +17,7 @@
         (click)="endDate.toggle()" formControlName="endDate" ngbDatepicker #endDate="ngbDatepicker">
     </div>
     <div class="col-auto">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="button" (click)="getActivityCount()">
+      <button class="btn btn-success my-2 my-sm-0" type="button" (click)="getActivityCount()">
         view </button>
     </div>
   </div>
