--- a/src/app/_metronic/partials/content/widgets/tables/tables-widget19/tables-widget19.component.html
+++ b/src/app/_metronic/partials/content/widgets/tables/tables-widget19/tables-widget19.component.html
@@ -39,8 +39,14 @@
             </div>
             <div class="row">
                 <div class="col-md-9"></div>
-                <div class="col-md-3">
-                    <a class="nav-link btn btn-sm btn-color-muted btn-active btn-active-light-primary fw-bolder px-4 me-1"
+                <div class="col-md-2">
+                    <a class="
+                    nav-link
+                    btn btn-sm btn-color-muted btn-active btn-active-light-primary
+                    fw-bolder
+                    px-4
+                    me-1
+                  " data-bs-toggle="tab" [ngClass]="activeClass('kt_table_widget_19_tab_1')"
                         (click)="exportExcel()">
                         CSV
                     </a>
@@ -89,16 +95,16 @@
                         <td>{{data.hostPhone}}</td>
 
                         <td style="text-align: left;cursor: pointer;">
-                            <!-- <div ngbDropdown placement="bottom-left">
+                            <div ngbDropdown placement="bottom-left">
                                 <i class="fa-solid fa-ellipsis-vertical" ngbDropdownToggle
                                     data-toggle="dropdown" aria-expanded="true"></i>
                                 <div class="dropdown-menu dropdown-menu-end" ngbDropdownMenu>
                                     <a class="dropdown-item" href="javascript: void(0);"
-                                        [routerLink]="['/admin/customerDetailsEdit', data.customerId]">
+                                        [routerLink]="['/customerDetails/customerDetailsEdit', data.customerId]">
                                         <i class="fas fa-edit" style="color: #4e9b4e;">
                                         </i> &nbsp; Edit</a>
                                 </div>
-                            </div> -->
+                            </div>
                         </td>
 
                     </tr>
