--- a/src/app/_metronic/partials/content/widgets/tables/tables-widget22/tables-widget22.component.html
+++ b/src/app/_metronic/partials/content/widgets/tables/tables-widget22/tables-widget22.component.html
@@ -39,8 +39,14 @@
             
             <div class="row">
                 <div class="col-md-9"></div>
-                <div class="col-md-3">
-                    <a class="nav-link btn btn-sm btn-color-muted btn-active btn-active-light-primary fw-bolder px-4 me-1"
+                <div class="col-md-2">
+                    <a class="
+                    nav-link
+                    btn btn-sm btn-color-muted btn-active btn-active-light-primary
+                    fw-bolder
+                    px-4
+                    me-1
+                  " data-bs-toggle="tab" [ngClass]="activeClass('kt_table_widget_22_tab_1')"
                         (click)="exportExcel()">
                         CSV
                     </a>
