--- a/src/app/_metronic/partials/content/widgets/tables/tables-widget24/tables-widget24.component.html
+++ b/src/app/_metronic/partials/content/widgets/tables/tables-widget24/tables-widget24.component.html
@@ -1,11 +1,18 @@
 <div class="card-body py-3">
     <div class="row">
-        <div class="col-md-6"></div>
-        <div class="col-md-1">
-            <span style="font-size: 66px;cursor: pointer;" ngbTooltip="Download CSV" (click)="exportExcel()"><i
-                    class="fas fa-file-csv"></i></span>
+        <div class="col-md-5"></div>
+        <div class="col-md-2">
+            <a class="
+            nav-link
+            btn btn-sm btn-color-muted btn-active btn-active-light-primary
+            fw-bolder
+            px-4
+            me-1
+          " data-bs-toggle="tab" [ngClass]="activeClass('kt_table_widget_24_tab_1')" (click)="exportExcel()">
+                CSV
+            </a>
         </div>
-        
+
         <div class="table-responsive mb-0">
             <table class="table table-centered">
                 <thead class="table-light">
@@ -16,14 +23,15 @@
                         <th>Oil Company</th>
                         <th>Owner Name</th>
                         <th>Contact Number</th>
-                        <th >Active Pump</th>
+                        <th>Active Pump</th>
                     </tr>
                 </thead>
 
-                <tbody *ngFor="let data of demoDealerData | paginate: { itemsPerPage: 10, currentPage: p, totalItems: total }; let i = index">
+                <tbody
+                    *ngFor="let data of demoDealerData | paginate: { itemsPerPage: 10, currentPage: p, totalItems: total }; let i = index">
                     <tr>
                         <td>{{data.FuelVeelsId}}</td>
-                        <td>{{data.customerCreatedAt  | date:"d MMM, yyyy"}}</td>
+                        <td>{{data.customerCreatedAt | date:"d MMM, yyyy"}}</td>
                         <td>{{data.companyName}}</td>
                         <td>{{data.brandName}}</td>
                         <td>{{data.hostName}}</td>
