--- a/src/app/_metronic/partials/layout/extras/dropdown-inner/user-inner/user-inner.component.html
+++ b/src/app/_metronic/partials/layout/extras/dropdown-inner/user-inner/user-inner.component.html
@@ -22,7 +22,7 @@
   <div class="separator my-2"></div>
 
   <div class="menu-item px-5">
-    <a routerLink="/crafted/pages/profile" class="menu-link px-5">
+    <a [routerLink]="['/customerDetails/customerDetail', customerId]" class="menu-link px-5">
       My Profile
     </a>
   </div>
@@ -188,7 +188,7 @@
   <div class="separator my-2"></div>
 
   <div class="menu-item px-5">
-    <a routerLink="/crafted/pages/profile" class="menu-link px-5">
+    <a [routerLink]="['/customerDetails/customerDetail', customerId]" class="menu-link px-5">
       My Profile
     </a>
   </div>
