--- a/src/app/pages/customerDetails/customer-details-edit/customer-details-edit.component.html
+++ b/src/app/pages/customerDetails/customer-details-edit/customer-details-edit.component.html
@@ -1,4 +1,4 @@
 <div class="card-header">
-    <b>Edit Fuel Partner</b>
+    <b>Customer Details </b>
 </div>
 <app-stats-widget11></app-stats-widget11> 
