--- a/src/app/_metronic/partials/content/widgets/tables/tables-widget22/tables-widget22.component.html
+++ b/src/app/_metronic/partials/content/widgets/tables/tables-widget22/tables-widget22.component.html
@@ -140,6 +140,12 @@
                     </tr>
                 </tbody>
             </table>
+            
+            <!-- begin::Pagination -->
+            <pagination-controls (pageChange)="pageChangeEvent($event)" previousLabel="" nextLabel=""
+                style="text-align: end; font-size: x-large; font-family: 'Font Awesome 6 Free'; font-style: oblique;">
+            </pagination-controls>
+            <!-- end::Pagination -->
         </div>
 
     </div>
