--- a/src/app/_metronic/layout/components/header/header-menu/header-menu.component.html
+++ b/src/app/_metronic/layout/components/header/header-menu/header-menu.component.html
@@ -1,6 +1,8 @@
+<div *ngIf="!isAdmin">
 <span class="h-25px app-sidebar-logo-default" style="font-size: 30px;padding:12px 20px;">
   REALMEOW PETROL PUMP
 </span>
 <span class="h-25px app-sidebar-logo-default" style="font-size: 20px;padding-top: 26px;">
   
 PUNE</span>
+</div>
