--- a/src/app/_metronic/partials/content/widgets/stats/stats-widget10/stats-widget10.component.html
+++ b/src/app/_metronic/partials/content/widgets/stats/stats-widget10/stats-widget10.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid" *ngIf="acceesGroup == '7'"> >
+<div class="container-fluid" *ngIf="acceesGroup == '7'"> 
     <div class="row">
         <div class="col-12">
             <div class="card">
