--- a/src/app/_metronic/partials/content/widgets/stats/stats-widget4/stats-widget4.component.html
+++ b/src/app/_metronic/partials/content/widgets/stats/stats-widget4/stats-widget4.component.html
@@ -79,7 +79,7 @@
                     </tr>
                   </thead>
                   <tbody
-                    *ngFor="let data of updateMobileLog; let i = index;">
+                    *ngFor="let data of updateMobileLog | paginate: { itemsPerPage: 10, currentPage: p, totalItems: total }; let i = index;">
                     <tr>
                       <td style="text-align: left;"> {{i + 1}} </td>
                       <td style="text-align: left;"> {{data.updateMobileLogDate |
@@ -92,11 +92,11 @@
                     </tr>
                   </tbody>
                 </table>
-                <!-- <div class="text-md-right float-md-end pagination-rounded">
-                  <ngb-pagination [collectionSize]="updateMobileLog1.length" [(page)]="page" [pageSize]="pageSize"
+                <div class="text-md-right float-md-end pagination-rounded">
+                  <ngb-pagination [collectionSize]="updateMobileLog.length" [(page)]="page" [pageSize]="pageSize"
                     [maxSize]="5" [rotate]="true" [boundaryLinks]="true">
                   </ngb-pagination>
-                </div> -->
+                </div>
               </div>
             </div>
           </form>
