changes added by tejaswini

--- a/src/app/_metronic/layout/components/header/header-menu/header-menu.component.html
+++ b/src/app/_metronic/layout/components/header/header-menu/header-menu.component.html
@@ -1,8 +1,16 @@
-<div *ngIf="!isAdmin">
+<div>
 <span class="h-25px app-sidebar-logo-default" style="font-size: 30px;padding:12px 20px;">
-  REALMEOW PETROL PUMP
+  {{companyName}}
 </span>
 <span class="h-25px app-sidebar-logo-default" style="font-size: 20px;padding-top: 26px;">
   
-PUNE</span>
+{{city}}</span>
 </div>
+
+<!-- <div *ngIf="isAdmin">
+  <span class="h-25px app-sidebar-logo-default" style="font-size: 30px;padding:12px 20px;">
+    VEELSPLUS CORE 
+  </span>
+  <span class="h-25px app-sidebar-logo-default" style="font-size: 15px;padding-top: 26px;">
+  Thane</span>
+  </div> -->
